--- a/index.html
+++ b/index.html
@@ -2,141 +2,125 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
-  <title>Sürpriz</title>
+  <title>♥ Sürpriz ♥</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    html, body {
-      width: 100%;
-      height: 100%;
+    body {
+      margin: 0;
+      background: black;
+      color: white;
       font-family: 'Segoe UI', sans-serif;
       overflow: hidden;
-      background-color: black;
     }
-    #slider-container {
+
+    #container {
       position: fixed;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
+      top: 0; left: 0; right: 0; bottom: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: black;
+      z-index: 10;
     }
+
+    #ask {
+      font-size: 24px;
+      text-align: center;
+    }
+
     #slider {
       display: flex;
-      width: 1500vw;
-      height: 100%;
-      animation: slide 60s infinite linear;
+      width: 100vw;
+      height: 100vh;
+      position: relative;
     }
+
     .slide {
-      flex: 0 0 100vw;
+      min-width: 100%;
       height: 100%;
+      background-size: cover;
+      background-position: center;
+      transition: transform 1s ease-in-out;
     }
-    .slide img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-    @keyframes slide {
-      0% { transform: translateX(0); }
-      100% { transform: translateX(-1400vw); }
-    }
-    #girisEkrani {
-      z-index: 2;
+
+    #message {
       position: absolute;
-      top: 50%;
+      top: 30px;
       left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-      background-color: rgba(0,0,0,0.7);
-      padding: 30px;
-      border-radius: 10px;
-      color: white;
-    }
-    input {
-      padding: 10px;
-      font-size: 16px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      margin-top: 10px;
-    }
-    button {
-      padding: 10px 20px;
-      margin-top: 10px;
-      font-size: 16px;
-      border-radius: 8px;
-      background-color: #ff4d6d;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-    #icerik {
-      display: none;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: white;
+      transform: translateX(-50%);
       font-size: 36px;
-      text-shadow: 2px 2px 10px black;
-      z-index: 1;
-      text-align: center;
+      font-weight: bold;
+      background: rgba(0,0,0,0.5);
+      padding: 10px 20px;
+      border-radius: 12px;
+    }
+
+    audio {
+      display: none;
     }
   </style>
 </head>
 <body>
 
-  <!-- 🎵 Müzik -->
-  <audio autoplay loop>
-    <source src="Emre Altuğ - Neyleyim.mp3" type="audio/mp3">
-  </audio>
-
-  <!-- 🎞️ Arka plan kayar fotoğraflar -->
-  <div id="slider-container">
-    <div id="slider">
-      <!-- 15 fotoğrafı sırayla göster -->
-      <div class="slide"><img src="foto1.jpg"></div>
-      <div class="slide"><img src="foto2.jpg"></div>
-      <div class="slide"><img src="foto3.jpg"></div>
-      <div class="slide"><img src="foto4.jpg"></div>
-      <div class="slide"><img src="foto5.jpg"></div>
-      <div class="slide"><img src="foto6.jpg"></div>
-      <div class="slide"><img src="foto7.jpg"></div>
-      <div class="slide"><img src="foto8.jpg"></div>
-      <div class="slide"><img src="foto9.jpg"></div>
-      <div class="slide"><img src="foto10.jpg"></div>
-      <div class="slide"><img src="foto11.jpg"></div>
-      <div class="slide"><img src="foto12.jpg"></div>
-      <div class="slide"><img src="foto13.jpg"></div>
-      <div class="slide"><img src="foto14.jpg"></div>
-      <div class="slide"><img src="foto15.jpg"></div>
-    </div>
+<div id="container">
+  <div id="ask">
+    <p>Yıldönümümüzü hatırlıyor musun? (gg.aa.yyyy)</p>
+    <input type="text" id="input" placeholder="örn: 02.04.2021">
+    <button onclick="check()">Gönder</button>
+    <p id="error" style="color:red;"></p>
   </div>
+</div>
 
-  <!-- 💌 Giriş ekranı -->
-  <div id="girisEkrani">
-    <h2>Yıldönümümüz ne zaman? (gg.aa.yyyy)</h2>
-    <input type="text" id="answer" placeholder="örn: 02.04.2021">
-    <br>
-    <button onclick="checkAnswer()">Gönder</button>
-    <div id="wrong" style="color: pink; margin-top: 10px; display:none;">
-      Yanlış cevap, bir daha düşün 😊
-    </div>
-  </div>
+<div id="slider" style="display:none;">
+  <div id="message">Seni çok seviyorum ❤️</div>
+  <!-- FOTOĞRAFLAR -->
+  <div class="slide" style="background-image:url('foto1.jpg')"></div>
+  <div class="slide" style="background-image:url('foto2.jpg')"></div>
+  <div class="slide" style="background-image:url('foto3.jpg')"></div>
+  <div class="slide" style="background-image:url('foto4.jpg')"></div>
+  <div class="slide" style="background-image:url('foto5.jpg')"></div>
+  <div class="slide" style="background-image:url('foto6.jpg')"></div>
+  <div class="slide" style="background-image:url('foto7.jpg')"></div>
+  <div class="slide" style="background-image:url('foto8.jpg')"></div>
+  <div class="slide" style="background-image:url('foto9.jpg')"></div>
+  <div class="slide" style="background-image:url('foto10.jpg')"></div>
+  <div class="slide" style="background-image:url('foto11.jpg')"></div>
+  <div class="slide" style="background-image:url('foto12.jpg')"></div>
+  <div class="slide" style="background-image:url('foto13.jpg')"></div>
+  <div class="slide" style="background-image:url('foto14.jpg')"></div>
+  <div class="slide" style="background-image:url('foto15.jpg')"></div>
+</div>
 
-  <!-- 🎉 Mesaj -->
-  <div id="icerik">
-    <p>Seni çok seviyorum ❤️</p>
-  </div>
+<audio id="music" autoplay loop>
+  <source src="Emre Altuğ - Neyleyim.mp3" type="audio/mpeg">
+</audio>
 
-  <script>
-    function checkAnswer() {
-      const input = document.getElementById("answer").value.trim();
-      if (input === "02.04.2021") {
-        document.getElementById("girisEkrani").style.display = "none";
-        document.getElementById("icerik").style.display = "block";
-      } else {
-        document.getElementById("wrong").style.display = "block";
-      }
+<script>
+  const correctDate = "02.04.2021";
+
+  function check() {
+    const userInput = document.getElementById("input").value.trim();
+    if (userInput === correctDate) {
+      document.getElementById("container").style.display = "none";
+      document.getElementById("slider").style.display = "flex";
+      document.getElementById("music").play();
+      startSlider();
+    } else {
+      document.getElementById("error").textContent = "Yanlış tarih, tekrar dene ♥";
     }
-  </script>
+  }
+
+  let current = 0;
+  function startSlider() {
+    const slides = document.querySelectorAll('.slide');
+    setInterval(() => {
+      current = (current + 1) % slides.length;
+      slides.forEach((s, i) => {
+        s.style.transform = `translateX(-${current * 100}%)`;
+      });
+    }, 3000);
+  }
+</script>
 
 </body>
 </html>
+
