--- a/index.html
+++ b/index.html
@@ -2,56 +2,34 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
-  <title>♥ Sürpriz ♥</title>
+  <title>Sürpriz ♥</title>
   <style>
     body {
-      margin: 0;
       background: black;
       color: white;
       font-family: 'Segoe UI', sans-serif;
-      overflow: hidden;
-    }
-
-    #container {
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      background: black;
-      z-index: 10;
-    }
-
-    #ask {
-      font-size: 24px;
+      height: 100vh;
+      margin: 0;
       text-align: center;
     }
 
-    #slider {
-      display: flex;
-      width: 100vw;
-      height: 100vh;
-      position: relative;
+    input, button {
+      padding: 10px;
+      font-size: 16px;
+      margin-top: 10px;
+      border: none;
+      border-radius: 8px;
     }
 
-    .slide {
-      min-width: 100%;
-      height: 100%;
-      background-size: cover;
-      background-position: center;
-      transition: transform 1s ease-in-out;
-    }
-
-    #message {
-      position: absolute;
-      top: 30px;
-      left: 50%;
-      transform: translateX(-50%);
-      font-size: 36px;
-      font-weight: bold;
-      background: rgba(0,0,0,0.5);
-      padding: 10px 20px;
-      border-radius: 12px;
+    #loveMessage {
+      font-size: 30px;
+      margin-top: 20px;
+      display: none;
+      color: #ff3366;
     }
 
     audio {
@@ -61,65 +39,39 @@
 </head>
 <body>
 
-<div id="container">
-  <div id="ask">
-    <p>Yıldönümümüzü hatırlıyor musun? (gg.aa.yyyy)</p>
-    <input type="text" id="input" placeholder="örn: 02.04.2021">
-    <button onclick="check()">Gönder</button>
-    <p id="error" style="color:red;"></p>
-  </div>
-</div>
+  <h2>Yıldönümümüzü hatırlıyor musun?</h2>
+  <p style="font-size: 18px;">(gg.aa.yyyy formatında yaz)</p>
+  <input type="text" id="dateInput" placeholder="örnek: 02.04.2021">
+  <br>
+  <button onclick="kontrolEt()">Gönder</button>
+  <p id="error" style="color:red; margin-top: 10px;"></p>
 
-<div id="slider" style="display:none;">
-  <div id="message">Seni çok seviyorum ❤️</div>
-  <!-- FOTOĞRAFLAR -->
-  <div class="slide" style="background-image:url('foto1.jpg')"></div>
-  <div class="slide" style="background-image:url('foto2.jpg')"></div>
-  <div class="slide" style="background-image:url('foto3.jpg')"></div>
-  <div class="slide" style="background-image:url('foto4.jpg')"></div>
-  <div class="slide" style="background-image:url('foto5.jpg')"></div>
-  <div class="slide" style="background-image:url('foto6.jpg')"></div>
-  <div class="slide" style="background-image:url('foto7.jpg')"></div>
-  <div class="slide" style="background-image:url('foto8.jpg')"></div>
-  <div class="slide" style="background-image:url('foto9.jpg')"></div>
-  <div class="slide" style="background-image:url('foto10.jpg')"></div>
-  <div class="slide" style="background-image:url('foto11.jpg')"></div>
-  <div class="slide" style="background-image:url('foto12.jpg')"></div>
-  <div class="slide" style="background-image:url('foto13.jpg')"></div>
-  <div class="slide" style="background-image:url('foto14.jpg')"></div>
-  <div class="slide" style="background-image:url('foto15.jpg')"></div>
-</div>
+  <div id="loveMessage">Seni çok seviyorum ❤️</div>
 
-<audio id="music" autoplay loop>
-  <source src="Emre Altuğ - Neyleyim.mp3" type="audio/mpeg">
-</audio>
+  <audio id="myAudio" autoplay loop>
+    <source src="Emre Altuğ - Neyleyim.mp3" type="audio/mpeg">
+    Tarayıcınız ses etiketini desteklemiyor.
+  </audio>
 
-<script>
-  const correctDate = "02.04.2021";
+  <script>
+    const dogruTarih = "02.04.2021";
 
-  function check() {
-    const userInput = document.getElementById("input").value.trim();
-    if (userInput === correctDate) {
-      document.getElementById("container").style.display = "none";
-      document.getElementById("slider").style.display = "flex";
-      document.getElementById("music").play();
-      startSlider();
-    } else {
-      document.getElementById("error").textContent = "Yanlış tarih, tekrar dene ♥";
+    function kontrolEt() {
+      const girilenTarih = document.getElementById("dateInput").value.trim();
+      const errorText = document.getElementById("error");
+      const ses = document.getElementById("myAudio");
+
+      if (girilenTarih === dogruTarih) {
+        document.getElementById("loveMessage").style.display = "block";
+        errorText.textContent = "";
+        ses.play().catch(() => {
+          errorText.textContent = "Tarayıcı otomatik çalmaya izin vermiyor, tıklayıp başlatabilirsin.";
+        });
+      } else {
+        errorText.textContent = "Yanlış tarih, tekrar dene 💔";
+      }
     }
-  }
-
-  let current = 0;
-  function startSlider() {
-    const slides = document.querySelectorAll('.slide');
-    setInterval(() => {
-      current = (current + 1) % slides.length;
-      slides.forEach((s, i) => {
-        s.style.transform = `translateX(-${current * 100}%)`;
-      });
-    }, 3000);
-  }
-</script>
+  </script>
 
 </body>
 </html>
